--- a/styles.css
+++ b/styles.css
@@ -917,7 +917,7 @@ header nav {
 .product-image img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     object-position: center;
 }
 
